added three tasks

--- a/java-automation-demo-master/ConfigProject.properties
+++ b/java-automation-demo-master/ConfigProject.properties
@@ -1,6 +1,6 @@
 #Desired capabilities configuration
 #Change this configuration regard to your environment
-base_url = https://linkedin.com/login
+base_url = https://manual:menofmanual@www.devel.manual.co
 #Enter base user name for your environment
 base_user = tomash.test.gombosh@gmail.com
 #Enter base user password for your environment
